--- a/Game/package.json
+++ b/Game/package.json
@@ -12,6 +12,9 @@
     "vite": "^5.4.4"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
   }
 }
